// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`スナップショットテスト > index.js 1`] = `
{
  "languageOptions": {
    "ecmaVersion": "latest",
    "globals": {
      "AbortController": false,
      "AbortSignal": false,
      "Blob": false,
      "BroadcastChannel": false,
      "Buffer": false,
      "ByteLengthQueuingStrategy": false,
      "CompressionStream": false,
      "CountQueuingStrategy": false,
      "Crypto": false,
      "CryptoKey": false,
      "CustomEvent": false,
      "DOMException": false,
      "DecompressionStream": false,
      "Event": false,
      "EventTarget": false,
      "File": false,
      "FormData": false,
      "Headers": false,
      "MessageChannel": false,
      "MessageEvent": false,
      "MessagePort": false,
      "Navigator": false,
      "Performance": false,
      "PerformanceEntry": false,
      "PerformanceMark": false,
      "PerformanceMeasure": false,
      "PerformanceObserver": false,
      "PerformanceObserverEntryList": false,
      "PerformanceResourceTiming": false,
      "ReadableByteStreamController": false,
      "ReadableStream": false,
      "ReadableStreamBYOBReader": false,
      "ReadableStreamBYOBRequest": false,
      "ReadableStreamDefaultController": false,
      "ReadableStreamDefaultReader": false,
      "Request": false,
      "Response": false,
      "SubtleCrypto": false,
      "TextDecoder": false,
      "TextDecoderStream": false,
      "TextEncoder": false,
      "TextEncoderStream": false,
      "TransformStream": false,
      "TransformStreamDefaultController": false,
      "URL": false,
      "URLSearchParams": false,
      "WebAssembly": false,
      "WritableStream": false,
      "WritableStreamDefaultController": false,
      "WritableStreamDefaultWriter": false,
      "__dirname": false,
      "__filename": false,
      "atob": false,
      "btoa": false,
      "clearImmediate": false,
      "clearInterval": false,
      "clearTimeout": false,
      "console": false,
      "crypto": false,
      "exports": true,
      "fetch": false,
      "global": false,
      "module": false,
      "navigator": false,
      "performance": false,
      "process": false,
      "queueMicrotask": false,
      "require": false,
      "setImmediate": false,
      "setInterval": false,
      "setTimeout": false,
      "structuredClone": false,
    },
    "parser": "espree@9.6.1",
    "parserOptions": {},
    "sourceType": "module",
  },
  "plugins": [
    "@",
    "simple-import-sort:eslint-plugin-simple-import-sort@12.0.0",
    "unused-imports",
    "eqeqeq-fix",
    "@eslint-community/eslint-comments",
    "@dword-design/import-alias",
  ],
  "processor": undefined,
  "rules": {
    "@dword-design/import-alias/prefer-alias": [
      2,
      {
        "alias": {
          "@": "./src",
        },
      },
    ],
    "@eslint-community/eslint-comments/disable-enable-pair": [
      0,
    ],
    "@eslint-community/eslint-comments/no-aggregating-enable": [
      2,
    ],
    "@eslint-community/eslint-comments/no-duplicate-disable": [
      2,
    ],
    "@eslint-community/eslint-comments/no-unlimited-disable": [
      2,
    ],
    "@eslint-community/eslint-comments/no-unused-enable": [
      2,
    ],
    "@typescript-eslint/eqeqeq": [
      0,
    ],
    "@typescript-eslint/no-unused-vars": [
      0,
    ],
    "constructor-super": [
      2,
    ],
    "eqeqeq": [
      0,
    ],
    "eqeqeq-fix/eqeqeq": [
      1,
    ],
    "for-direction": [
      2,
    ],
    "getter-return": [
      2,
    ],
    "no-async-promise-executor": [
      2,
    ],
    "no-case-declarations": [
      2,
    ],
    "no-class-assign": [
      2,
    ],
    "no-compare-neg-zero": [
      2,
    ],
    "no-cond-assign": [
      2,
    ],
    "no-const-assign": [
      2,
    ],
    "no-constant-condition": [
      2,
    ],
    "no-control-regex": [
      2,
    ],
    "no-debugger": [
      2,
    ],
    "no-delete-var": [
      2,
    ],
    "no-dupe-args": [
      2,
    ],
    "no-dupe-class-members": [
      2,
    ],
    "no-dupe-else-if": [
      2,
    ],
    "no-dupe-keys": [
      2,
    ],
    "no-duplicate-case": [
      2,
    ],
    "no-empty": [
      2,
    ],
    "no-empty-character-class": [
      2,
    ],
    "no-empty-pattern": [
      2,
    ],
    "no-ex-assign": [
      2,
    ],
    "no-extra-boolean-cast": [
      2,
    ],
    "no-extra-semi": [
      2,
    ],
    "no-fallthrough": [
      2,
    ],
    "no-func-assign": [
      2,
    ],
    "no-global-assign": [
      2,
    ],
    "no-import-assign": [
      2,
    ],
    "no-inner-declarations": [
      2,
    ],
    "no-invalid-regexp": [
      2,
    ],
    "no-irregular-whitespace": [
      2,
    ],
    "no-loss-of-precision": [
      2,
    ],
    "no-misleading-character-class": [
      2,
    ],
    "no-mixed-spaces-and-tabs": [
      2,
    ],
    "no-new-symbol": [
      2,
    ],
    "no-nonoctal-decimal-escape": [
      2,
    ],
    "no-obj-calls": [
      2,
    ],
    "no-octal": [
      2,
    ],
    "no-prototype-builtins": [
      2,
    ],
    "no-redeclare": [
      2,
    ],
    "no-regex-spaces": [
      2,
    ],
    "no-self-assign": [
      2,
    ],
    "no-setter-return": [
      2,
    ],
    "no-shadow-restricted-names": [
      2,
    ],
    "no-sparse-arrays": [
      2,
    ],
    "no-this-before-super": [
      2,
    ],
    "no-undef": [
      2,
    ],
    "no-unexpected-multiline": [
      2,
    ],
    "no-unreachable": [
      2,
    ],
    "no-unsafe-finally": [
      2,
    ],
    "no-unsafe-negation": [
      2,
    ],
    "no-unsafe-optional-chaining": [
      2,
    ],
    "no-unused-labels": [
      2,
    ],
    "no-unused-vars": [
      2,
    ],
    "no-useless-backreference": [
      2,
    ],
    "no-useless-catch": [
      2,
    ],
    "no-useless-escape": [
      2,
    ],
    "no-with": [
      2,
    ],
    "require-yield": [
      2,
    ],
    "simple-import-sort/exports": [
      2,
    ],
    "simple-import-sort/imports": [
      2,
    ],
    "unused-imports/no-unused-imports": [
      2,
    ],
    "use-isnan": [
      2,
    ],
    "valid-typeof": [
      2,
    ],
  },
}
`;

exports[`スナップショットテスト > index.ts 1`] = `
{
  "languageOptions": {
    "ecmaVersion": "latest",
    "parser": "typescript-eslint/parser@7.4.0",
    "parserOptions": {
      "project": true,
    },
    "sourceType": "module",
  },
  "plugins": [
    "@",
    "@typescript-eslint:@typescript-eslint/eslint-plugin@7.4.0",
    "simple-import-sort:eslint-plugin-simple-import-sort@12.0.0",
    "unused-imports",
    "eqeqeq-fix",
    "@eslint-community/eslint-comments",
    "@dword-design/import-alias",
  ],
  "processor": undefined,
  "rules": {
    "@dword-design/import-alias/prefer-alias": [
      2,
      {
        "alias": {
          "@": "./src",
        },
      },
    ],
    "@eslint-community/eslint-comments/disable-enable-pair": [
      0,
    ],
    "@eslint-community/eslint-comments/no-aggregating-enable": [
      2,
    ],
    "@eslint-community/eslint-comments/no-duplicate-disable": [
      2,
    ],
    "@eslint-community/eslint-comments/no-unlimited-disable": [
      2,
    ],
    "@eslint-community/eslint-comments/no-unused-enable": [
      2,
    ],
    "@typescript-eslint/ban-ts-comment": [
      0,
    ],
    "@typescript-eslint/ban-types": [
      2,
    ],
    "@typescript-eslint/consistent-type-imports": [
      2,
    ],
    "@typescript-eslint/eqeqeq": [
      0,
    ],
    "@typescript-eslint/no-array-constructor": [
      2,
    ],
    "@typescript-eslint/no-duplicate-enum-values": [
      2,
    ],
    "@typescript-eslint/no-explicit-any": [
      2,
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-floating-promises": [
      2,
    ],
    "@typescript-eslint/no-loss-of-precision": [
      2,
    ],
    "@typescript-eslint/no-misused-new": [
      2,
    ],
    "@typescript-eslint/no-namespace": [
      2,
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      2,
    ],
    "@typescript-eslint/no-non-null-assertion": [
      0,
    ],
    "@typescript-eslint/no-this-alias": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      2,
    ],
    "@typescript-eslint/no-unsafe-declaration-merging": [
      2,
    ],
    "@typescript-eslint/no-unused-vars": [
      0,
    ],
    "@typescript-eslint/no-var-requires": [
      2,
    ],
    "@typescript-eslint/prefer-as-const": [
      2,
    ],
    "@typescript-eslint/triple-slash-reference": [
      2,
    ],
    "constructor-super": [
      0,
    ],
    "eqeqeq": [
      0,
    ],
    "eqeqeq-fix/eqeqeq": [
      1,
    ],
    "for-direction": [
      2,
    ],
    "getter-return": [
      0,
    ],
    "no-array-constructor": [
      0,
    ],
    "no-async-promise-executor": [
      2,
    ],
    "no-case-declarations": [
      2,
    ],
    "no-class-assign": [
      2,
    ],
    "no-compare-neg-zero": [
      2,
    ],
    "no-cond-assign": [
      2,
    ],
    "no-const-assign": [
      0,
    ],
    "no-constant-condition": [
      2,
    ],
    "no-control-regex": [
      2,
    ],
    "no-debugger": [
      2,
    ],
    "no-delete-var": [
      2,
    ],
    "no-dupe-args": [
      0,
    ],
    "no-dupe-class-members": [
      0,
    ],
    "no-dupe-else-if": [
      2,
    ],
    "no-dupe-keys": [
      0,
    ],
    "no-duplicate-case": [
      2,
    ],
    "no-empty": [
      2,
    ],
    "no-empty-character-class": [
      2,
    ],
    "no-empty-pattern": [
      2,
    ],
    "no-ex-assign": [
      2,
    ],
    "no-extra-boolean-cast": [
      2,
    ],
    "no-extra-semi": [
      2,
    ],
    "no-fallthrough": [
      2,
    ],
    "no-func-assign": [
      0,
    ],
    "no-global-assign": [
      2,
    ],
    "no-import-assign": [
      0,
    ],
    "no-inner-declarations": [
      2,
    ],
    "no-invalid-regexp": [
      2,
    ],
    "no-irregular-whitespace": [
      2,
    ],
    "no-loss-of-precision": [
      0,
    ],
    "no-misleading-character-class": [
      2,
    ],
    "no-mixed-spaces-and-tabs": [
      2,
    ],
    "no-new-symbol": [
      0,
    ],
    "no-nonoctal-decimal-escape": [
      2,
    ],
    "no-obj-calls": [
      0,
    ],
    "no-octal": [
      2,
    ],
    "no-prototype-builtins": [
      2,
    ],
    "no-redeclare": [
      0,
    ],
    "no-regex-spaces": [
      2,
    ],
    "no-self-assign": [
      2,
    ],
    "no-setter-return": [
      0,
    ],
    "no-shadow-restricted-names": [
      2,
    ],
    "no-sparse-arrays": [
      2,
    ],
    "no-this-before-super": [
      0,
    ],
    "no-undef": [
      0,
    ],
    "no-unexpected-multiline": [
      2,
    ],
    "no-unreachable": [
      0,
    ],
    "no-unsafe-finally": [
      2,
    ],
    "no-unsafe-negation": [
      0,
    ],
    "no-unsafe-optional-chaining": [
      2,
    ],
    "no-unused-labels": [
      2,
    ],
    "no-unused-vars": [
      0,
    ],
    "no-useless-backreference": [
      2,
    ],
    "no-useless-catch": [
      2,
    ],
    "no-useless-escape": [
      2,
    ],
    "no-var": [
      2,
    ],
    "no-with": [
      2,
    ],
    "prefer-const": [
      2,
    ],
    "prefer-rest-params": [
      2,
    ],
    "prefer-spread": [
      2,
    ],
    "require-yield": [
      2,
    ],
    "simple-import-sort/exports": [
      2,
    ],
    "simple-import-sort/imports": [
      2,
    ],
    "unused-imports/no-unused-imports": [
      2,
    ],
    "use-isnan": [
      2,
    ],
    "valid-typeof": [
      2,
    ],
  },
}
`;
